--- a/src/public/asset/css/product-details.css
+++ b/src/public/asset/css/product-details.css
@@ -337,7 +337,21 @@ header {
 
 .product-image img {
     max-width: 80%;
-    max-height: 80%;
+    max-height: 100%;
+}
+
+.product-image .img-hover {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.product-image:hover .img-hover {
+    opacity: 1;
+}
+
+.product-image:hover .img-main {
+    opacity: 0;
 }
 
 .discount-badge {
