--- a/src/public/asset/css/style.css
+++ b/src/public/asset/css/style.css
@@ -388,8 +388,22 @@ header {
 }
 
 .product-image img {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.product-image .img-hover {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.product-image:hover .img-hover {
+    opacity: 1;
+}
+
+.product-image:hover .img-main {
+    opacity: 0;
 }
 
 .discount-badge {
@@ -401,6 +415,7 @@ header {
     padding: 5px 10px;
     border-radius: 4px;
     font-size: 19px;
+    z-index: 1;
 }
 
 .product-info {
