--- a/src/views/productDetails.ejs
+++ b/src/views/productDetails.ejs
@@ -133,8 +133,11 @@
                                 <div class="discount-badge">
                                     <%= product.discountPercent %>%
                                 </div>
-                                <img src="<%= product.images[0].url%>"
+                                <img class="img-main" src="<%= product.images[0].url %>"
                                     style="width: 100%; height: 100%; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center;">
+                                <% const randomIndex=Math.floor(Math.random() * product.images.length); %>
+                                    <img style="width: 100%; height: 100%; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center;"
+                                        src="<%= product.images[randomIndex].url %>" class="img-hover">
                             </div>
                             <div class="product-info">
                                 <h3 class="product-title">
