--- a/src/views/checkout.ejs
+++ b/src/views/checkout.ejs
@@ -257,17 +257,31 @@
                 let html = `<h2>Thanh Toán Chuyển Khoản</h2>
                 <p>Vui lòng sử dụng mã QR bên dưới để hoàn tất thanh toán cho đơn hàng của bạn:</p>
         <img src="https://qr.sepay.vn/img?acc=VQRQAFEYF2204&bank=MBBank&amount=${totalPrice}&des=${document.getElementById("email").value}">
+        <button class="confirm-payment btn btn-primary">Xác Nhận Thanh Toán</button>
         <br><br>`;
+                const confirmPaymentBtn = document.getElementsByClassName('confirm-payment')[0];
+                confirmPaymentBtn.addEventListener('click', function () {
+                    alert('Cảm ơn bạn đã xác nhận thanh toán. Đơn hàng của bạn sẽ được xử lý trong thời gian sớm nhất!');
+                    return setTimeout(() => {
+                        alert('Order placed successfully! Thank you for your purchase.');
+                        fetch("/checkout-submit", {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify(data)
+                        })
+                        window.location.href = '/user-orders/' + userID;
+                    }, 2000);
+                });
                 getModalContent.innerHTML = html + `<button class="btn btn-close" onclick="closeModal()">Đóng</button>`;
-                // setTimeout(() => {
-                //     alert('Order placed successfully! Thank you for your purchase.');
-                //     fetch("/checkout-submit", {
-                //         method: "POST",
-                //         headers: { "Content-Type": "application/json" },
-                //         body: JSON.stringify(data)
-                //     })
-                //     window.location.href = '/user-orders/' + userID;
-                // }, 2000);
+                setTimeout(() => {
+                    alert('Order placed successfully! Thank you for your purchase.');
+                    fetch("/checkout-submit", {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify(data)
+                    })
+                    window.location.href = '/user-orders/' + userID;
+                }, 2000);
             } else {
                 alert('Please fill in all required fields');
             }
